Fixed align of account rs

--- a/src/containers/account/login/Login.scss
+++ b/src/containers/account/login/Login.scss
@@ -65,7 +65,7 @@
               height: 100%;
               display: flex;
               justify-content: center;
-              flex-direction: column;
+              flex-direction: row;
             }
           }
           @media(max-width: 768px) {
